[package]
name = "planter"
version = "0.1.0"
authors = ["Sebastiano Giordano"]
description = "PlanTer is a project management application."
documentation = "https://docs.rs/planter"
keywords = ["project_management"]
license = "Agpl-3.0"
readme = "README.md"
repository = "https://github.com/krahos/planter"
edition = "2024"

[dependencies]
chrono = "0.4.40"
iced = {features = ["advanced"], version = "0.14.0-dev"}
once_cell = "1.21.3"
# planter-core = {git = "https://github.com/krahos/planter-core.git"}
planter-core = {path = "../planter-core"}
regex = "1.11.1"

[patch.crates-io]
iced = { git = "https://github.com/iced-rs/iced.git"}
iced_core = { git = "https://github.com/iced-rs/iced.git"}
iced_widget = { git = "https://github.com/iced-rs/iced.git"}

[dev-dependencies]
proptest = "1.6.0"
