[package]
name = "planter"
version = "0.1.0"
authors = ["Sebastiano Giordano"]
description = "PlanTer is a project management application."
documentation = "https://docs.rs/planter"
keywords = ["project_management"]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/krahos/planter"
edition = "2024"

[dependencies]
chrono = "0.4.44"
iced = {features = ["advanced", "lazy"], version = "0.14.0"}
once_cell = "1.21.4"
planter-core = "0.0.4"
# planter-core = {path = "../planter-core"}
regex = "1.12.3"

[patch.crates-io]
iced = { git = "https://github.com/iced-rs/iced.git"}
iced_core = { git = "https://github.com/iced-rs/iced.git"}
iced_widget = { git = "https://github.com/iced-rs/iced.git"}

[dev-dependencies]
proptest = "1.11.0"
